changed paths for includes

--- a/aroundme.html
+++ b/aroundme.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
 
   <title>Around Me</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
   <div id="mapArea" style="width:600px;height:600px"></div>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqP8lpRkXXm5ahYT-1ekyFs1YTh5OmXbQ&libraries=places"></script>
-  <script src="js/aroundme.js"></script>
+  <script src="/js/aroundme.js"></script>
 
 </body>
 
